# stm

./: .gitignore  CMakeLists.txt  Makefile  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: client.c  client.h  colors.h  common.c  common.h  message.c  message.h  server.c  server.h
src/libs/termui/: USAGE.md  static.c  static.h  termui.c  termui.h
